TreeAnalysis/Plot/Temp3/SR_irred_bkg_div.txt
Info in <TCanvas::Print>: file Stack_SR_irred_bkg_div.png has been created
Info in <TCanvas::SaveAs>: ROOT file Stack_SR_irred_bkg_div.root has been created

######### Contribution to fake rate #########

DoubleMu .......................... 3.23906210612
DoubleEle .......................... 2.72710878076
MuEG .......................... 0.0563635145081
                                __________________ 

Irreducible background---------->  6.02253439499 


######### MonteCarlo samples #########

WWZJets .......................... 0.302447076057
TTZJets .......................... 1.58860274195
TTWWJets .......................... 0.0043484694387

######### Data #########

DoubleMu .......................... 108.0
DoubleEle .......................... 179.0
MuEG .......................... 1.0
digit anything you want to end the script 
Traceback (most recent call last):
  File "./scriptStack.py", line 42, in <module>
    CloseVar=input("digit anything you want to end the script \n")        
  File "<string>", line 0
    
    ^
SyntaxError: unexpected EOF while parsing
